--- a/.github/workflows/coursera-assignment.yml
+++ b/.github/workflows/coursera-assignment.yml
@@ -18,7 +18,8 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+#  build:
+  check-links:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -28,11 +29,14 @@ jobs:
       - uses: actions/checkout@v4
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
+#      - name: Run a one-line script
+      - name: Check for broken links
+#        run: echo Hello, world!
+        uses: lycheeverse/lychee-action@v2
+        with:
+          args: https://robbaarson.github.io/coursera-assignment/
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+#     - name: Run a multi-line script
+#       run: |
+#          echo Add other actions to build,
+#          echo test, and deploy your project.
