--- a/.github/workflows/check-broken-link.yml
+++ b/.github/workflows/check-broken-link.yml
@@ -4,11 +4,11 @@ name: Check for broken link
 
 # Controls when the workflow will run
 on:
-  schedule:
-    - cron: 1 12 * * *
+#  schedule:
+#    - cron: 1 12 * * *
   # Triggers the workflow on push or pull request events but only for the "main" branch
-#  push:
-#    branches: [ "main" ]
+  push:
+    branches: [ "main" ]
 #  pull_request:
 #    branches: [ "main" ]
 
