--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@
 # plugins:
 # - jekyll-remote-theme # add this line to the plugins list if you already have one
 
-theme: jekyll-theme-cayman
+# theme: jekyll-theme-cayman
+theme: minima
 ---
 title: Coursera Module 4
 author: RB
